Corrected contrast, improved javascript

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ header, footer {
     color: #F5F5F5;
     border-radius: 10px;
     box-shadow: 1px 1px 30px #555;
-    background-color: #0076b6;
+    background-color: #285f89;
 
 }
 header {
@@ -63,6 +63,11 @@ footer {
     margin-top: 3px;
 
 }
+
+footer #lastupdated {
+    color: yellow;
+    font-size: 0.8rem;
+ }
 
 
 @media screen and (max-width: 420px) {
